--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "sass": "^1.44.0",
     "sass-loader": "^12.3.0",
     "vue": "^3.0.0"
   },
@@ -15,7 +16,9 @@
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
-    "node-sass": "^6.0.1"
+    "node-sass": "^6.0.1",
+    "style-resources-loader": "^1.4.1",yiy
+    "vue-cli-plugin-style-resources-loader": "~0.1.5"
   },
   "browserslist": [
     "> 1%",
