--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
     "node-sass": "^6.0.1",
-    "style-resources-loader": "^1.4.1",yiy
+    "style-resources-loader": "^1.4.1",
     "vue-cli-plugin-style-resources-loader": "~0.1.5"
   },
   "browserslist": [
